# expressive-haskell

./: LICENSE  README.md  fluent-haskell.cabal  out.csv  stack.yaml  test.csv
app/: Main.hs
