name:                fluent-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fluent-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              John Children
copyright:           2017 John Children
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fluent-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fluent-haskell
